# ml-bridge

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_imagebridge.sh  setup.sh
src/plugins/ImageBridge/: CMakeLists.txt  ImageBridge.cpp  ImageBridge.h
src/plugins/ImageBridge/python/: comfyui_bridge.py
